[package]
name = "jwt-encde"
version = "0.4.0"
edition = "2024"

description = "GUI JWT encoder / decoder - Local, private, easy."
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["development-tools"]
keywords = ["jwt", "auth", "test", "encrytion", "security"]
repository = "https://github.com/nabbisen/jwt-encde"
readme = "README.md"
rust-version = "1.87.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
base64 = "0"
iced = "0.14"
json5 = "1"
jsonwebtoken = "10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
