[package]
name = "jwt-encde"
version = "1.0.7"
edition = "2024"

description = "GUI JWT encoder / decoder - Local, private, easy."
authors = ["nabbisen <nabbisen@scqr.net>"]
license = "Apache-2.0"

categories = ["development-tools"]
keywords = ["jwt", "auth", "test", "encryption", "security"]
repository = "https://github.com/nabbisen/jwt-encde"
readme = "README.md"
rust-version = "1.87.0"

[profile.release]     # shrink executable size
opt-level = "z"
lto = true
# panic = "abort"
strip = true
codegen-units = 1

[profile.dev]         # to improve productivity
opt-level = 1         # slightly optimize
lto = false           # disable link-time optimizations
incremental = false

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
base64 = "0.22"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
iced = { version = "0.14", features = ["highlighter", "svg"] }
json5 = "1"
jsonwebtoken = { version = "10", features = ["default", "rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
